--- a/Class 2/single_perceptron.ipynb
+++ b/Class 2/single_perceptron.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "88c4fba0",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,9 @@
     "import pandas as pd\n",
     "from sklearn.linear_model import Perceptron\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score, confusion_matrix"
+    "from sklearn.metrics import accuracy_score, confusion_matrix\n",
+    "import warnings \n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -31,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "6d5e45be",
    "metadata": {},
    "outputs": [],
@@ -53,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "60697ff2",
    "metadata": {},
    "outputs": [],
@@ -73,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "73d71746",
    "metadata": {},
    "outputs": [
@@ -87,14 +89,6 @@
       " [0 2]]\n",
       "Prédiction pour A=4, B=5 : 1\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/envs/dl_env/lib/python3.10/site-packages/sklearn/utils/validation.py:2749: UserWarning: X does not have valid feature names, but Perceptron was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
     }
    ],
    "source": [
@@ -103,14 +97,6 @@
     "\n",
     "print(\"Prédiction pour A=4, B=5 :\", model.predict([[4,5]])[0])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "725fddec",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
