Final tests of the day

--- a/Projet/DeepLOB.ipynb
+++ b/Projet/DeepLOB.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 59,
    "id": "76db0836",
    "metadata": {},
    "outputs": [],
@@ -26,6 +26,7 @@
     "from sklearn.metrics import accuracy_score, f1_score, classification_report\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.utils.class_weight import compute_class_weight\n",
+    "from torch.utils.data import DataLoader, WeightedRandomSampler\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -2863,7 +2864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 76,
    "id": "ec5360ad",
    "metadata": {},
    "outputs": [],
@@ -2891,7 +2892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 77,
    "id": "c46bfa1d",
    "metadata": {},
    "outputs": [],
@@ -2929,24 +2930,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "0cf14123",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
     "\n",
     "class DeepLOB(nn.Module):\n",
-    "    def init(self, in_channels, n_classes=3, lstm_hidden=64, lstm_layers=2, negative_slope=0.01):\n",
-    "        super().init()\n",
+    "    def __init__(self, in_channels, n_classes=3, lstm_hidden=128, negative_slope=0.01):\n",
+    "        super().__init__()\n",
+    "\n",
     "        self.act = nn.LeakyReLU(negative_slope=negative_slope)\n",
     "\n",
-    "        # --- CNN layers ---\n",
+    "        # --- CNN layers with same padding ---\n",
     "        self.conv1 = nn.Conv1d(in_channels, 64, kernel_size=3, padding='same')\n",
     "        self.bn1 = nn.BatchNorm1d(64)\n",
     "\n",
-    "        # --- Inception modules ---\n",
+    "        # --- Inception modules (pooling is only inside them) ---\n",
     "        self.inc1 = InceptionBlock(64, 128, negative_slope)\n",
     "        self.inc2 = InceptionBlock(128, 128, negative_slope)\n",
     "\n",
@@ -2954,11 +2954,10 @@
     "        self.conv_down = nn.Conv1d(128, 64, kernel_size=3, padding='same')\n",
     "        self.bn2 = nn.BatchNorm1d(64)\n",
     "\n",
-    "        # --- Stacked Bidirectional LSTM ---\n",
+    "        # --- Bidirectional LSTM for temporal dependency ---\n",
     "        self.lstm = nn.LSTM(\n",
     "            input_size=64,\n",
     "            hidden_size=lstm_hidden,\n",
-    "            num_layers=lstm_layers,\n",
     "            batch_first=True,\n",
     "            bidirectional=True\n",
     "        )\n",
@@ -2968,7 +2967,7 @@
     "        self.out = nn.Linear(64, n_classes)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        # x: (batch, features, seq_len)\n",
+    "        # x shape: (batch, features, seq_len)\n",
     "        x = self.act(self.bn1(self.conv1(x)))\n",
     "        x = self.inc1(x)\n",
     "        x = self.inc2(x)\n",
@@ -2978,15 +2977,15 @@
     "        x = x.permute(0, 2, 1)\n",
     "\n",
     "        out, _ = self.lstm(x)\n",
-    "        out = out[:, -1, :]  # take last time step output\n",
+    "        out = out[:, -1, :]  # last time step output\n",
     "\n",
     "        out = self.act(self.fc(out))\n",
-    "        return self.out(out)\n"
+    "        return self.out(out)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 79,
    "id": "01d43337",
    "metadata": {},
    "outputs": [],
@@ -3027,7 +3026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 80,
    "id": "7d4877f5",
    "metadata": {},
    "outputs": [],
@@ -3085,7 +3084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 81,
    "id": "9322dbd6",
    "metadata": {},
    "outputs": [
@@ -3094,26 +3093,26 @@
      "output_type": "stream",
      "text": [
       "Using device : mps\n",
-      "Epoch 1: train 1.0797/0.4101 | val 1.1398/0.3702\n",
-      "Epoch 2: train 1.0750/0.4176 | val 1.1282/0.3786\n",
-      "Epoch 3: train 1.0723/0.4211 | val 1.1083/0.3681\n",
-      "Epoch 4: train 1.0677/0.4217 | val 1.1232/0.3714\n",
-      "Epoch 5: train 1.0725/0.4212 | val 1.1145/0.3614\n",
-      "Epoch 6: train 1.0699/0.4117 | val 1.1336/0.3464\n",
-      "Epoch 7: train 1.0663/0.4150 | val 1.1249/0.3908\n",
-      "Epoch 8: train 1.0621/0.4215 | val 1.1428/0.3478\n",
-      "Epoch 9: train 1.0600/0.4320 | val 1.1348/0.3531\n",
-      "Epoch 10: train 1.0637/0.4248 | val 1.1230/0.3767\n",
+      "Epoch 1: train 1.0905/0.4026 | val 1.1112/0.3592\n",
+      "Epoch 2: train 1.0887/0.3915 | val 1.1208/0.3557\n",
+      "Epoch 3: train 1.0861/0.3975 | val 1.1197/0.3386\n",
+      "Epoch 4: train 1.0874/0.3861 | val 1.1242/0.3378\n",
+      "Epoch 5: train 1.0893/0.3918 | val 1.1282/0.3478\n",
+      "Epoch 6: train 1.0862/0.3895 | val 1.1031/0.3888\n",
+      "Epoch 7: train 1.0833/0.3868 | val 1.1318/0.3811\n",
+      "Epoch 8: train 1.0770/0.3911 | val 1.1765/0.3536\n",
+      "Epoch 9: train 1.0748/0.3942 | val 1.1436/0.3700\n",
+      "Epoch 10: train 1.0698/0.3945 | val 1.1321/0.3703\n",
       "=== TEST ===\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.46      0.42      0.44      6072\n",
-      "           1       0.23      0.32      0.26      2351\n",
-      "           2       0.40      0.37      0.39      5359\n",
+      "           0       0.49      0.04      0.08      6072\n",
+      "           1       0.26      0.28      0.27      2351\n",
+      "           2       0.41      0.81      0.54      5359\n",
       "\n",
       "    accuracy                           0.38     13782\n",
-      "   macro avg       0.36      0.37      0.36     13782\n",
-      "weighted avg       0.40      0.38      0.39     13782\n",
+      "   macro avg       0.39      0.38      0.30     13782\n",
+      "weighted avg       0.42      0.38      0.29     13782\n",
       "\n"
      ]
     }
@@ -3149,7 +3148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "dc0494c0",
    "metadata": {},
    "outputs": [],
@@ -3173,7 +3172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "9c3e3bdd",
    "metadata": {},
    "outputs": [
@@ -3192,11 +3191,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "b7744b62",
    "metadata": {},
    "outputs": [],
    "source": [
+    "device = torch.device(\"mps\" if torch.backends.mps.is_available() else \"cpu\")\n",
+    "\n",
     "class_weights = compute_class_weight('balanced', classes=np.unique(y_train), y=y_train)\n",
     "class_weights = torch.tensor(class_weights, dtype=torch.float).to(device)\n",
     "\n",
@@ -3205,7 +3206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "773e90cb",
    "metadata": {},
    "outputs": [
